--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <style type="text/css">
       #timer {
         color: green;
+        font-size: 28px;
       }
 
       #timer.contract {
@@ -30,6 +31,9 @@
         <form id="kTrainer">
           <div id="timer" class="lead form-group">
             <span>60</span>s
+          </div>
+          <div id="level" class="lead form-group">
+          Level <span></span>
           </div>
           <div class="form-group">
             <button id="btn" type="button" class="btn btn-light">Start</button>
