reset button added

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
           </div>
           <div class="form-group">
             <button id="btn" type="button" class="btn btn-light">Start</button>
+            <button id="reset" type="button" class="btn btn-light">Reset</button>
           </div>
         </form>
       </div>
